--- a/src/catalog.html
+++ b/src/catalog.html
@@ -32,19 +32,19 @@
             <!--If there are one or more toys-->
             <div class="added-toys">
                 <a href="#" class="added-toys-in-market">
-                    <img src="https://i.etsystatic.com/35758287/r/il/8d6568/4212430421/il_794xN.4212430421_1lvk.jpg" class="picture-added-toys">
+                    <img src="./image/picture1.jpg" class="picture-added-toys">
                     <h3>Snowy pine Wooden tree toy</h3>
                     <span>Price: $33.00</span>
                 </a>
 
                 <a href="#" class="added-toys-in-market">
-                    <img src="https://i.etsystatic.com/22530228/r/il/502c1f/2675767512/il_794xN.2675767512_2ts4.jpg" class="picture-added-toys">
+                    <img src="./image/picture2.jpg" class="picture-added-toys">
                     <h3>Christmas felt set Christmas ornament</h3>
                     <span>Price: $76.00</span>
                 </a>
 
                 <a href="#" class="added-toys-in-market">
-                    <img src="https://i.etsystatic.com/35233122/r/il/09838d/4208534095/il_794xN.4208534095_c5ts.jpg" class="picture-added-toys">
+                    <img src="./image/picture3.jpg" class="picture-added-toys">
                     <h3>Funny Christmas Tree</h3>
                     <span>Price: $26.00</span>
                 </a>
